[gd_scene load_steps=4 format=3 uid="uid://ccxtnp20kp8qk"]

[ext_resource type="PackedScene" uid="uid://d34hkypk02kw1" path="res://Scenes/Common/Buttons/settings_managed_text_button.tscn" id="1_5idk7"]
[ext_resource type="Script" path="res://Scenes/Common/Buttons/Scripts/remove_confirm_button.gd" id="1_ic6xa"]
[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="3_t7xuq"]

[node name="RemoveConfirmButton" type="Control"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("1_ic6xa")

[node name="RemoveButton" parent="." instance=ExtResource("1_5idk7")]
clip_children = 2
clip_contents = true
layout_mode = 1
anchors_preset = 4
anchor_right = 0.0
offset_top = -25.0
offset_right = 87.0
offset_bottom = 25.0
grow_horizontal = 1
text = "Remove"

[node name="ProgressBar" type="ProgressBar" parent="RemoveButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_t7xuq")
value = 3.0
show_percentage = false

[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
